feat: Alterado checkNpc

--- a/src/css/clue.scss
+++ b/src/css/clue.scss
@@ -2,7 +2,7 @@
   --plum-color: #121212;
   --scarlett-color: #CE301E;
   --white-color: #fff;
-  --mustard-color: #F2C037;
+  --mustard-color: #FF5A00;
   --green-color: #009688;
   --peacock-color: #B300B3;
 }
