--- a/src/components/dice-rolling-styles.scss
+++ b/src/components/dice-rolling-styles.scss
@@ -9,9 +9,9 @@
 
 .container {
   height: 100%;
-  width: 100%;
+  width: 100vw;
   position: relative;
-  background-color: var(--clue-dark);
+  // background-color: rgba($color: #000000, $alpha: 0); //var(--clue-dark);
   overflow: hidden;
 }
 
@@ -998,7 +998,7 @@ $rollsBMap: (
   transition: opacity 1.14s 1.88s, background-color 2.12s 2s, transform 1.17s 1.68s cubic-bezier(0.86, 0, 0.07, 1);
   transform: rotate(-45deg) scale(1);
   opacity: 1;
-  background-color: #913333;
+  //background-color: #913333;
 }
 
 .result-bg:before {
