--- a/src/components/dice-rolling-styles.scss
+++ b/src/components/dice-rolling-styles.scss
@@ -7,7 +7,7 @@
 //   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 // }
 
-.container {
+.dice-container {
   height: 100%;
   width: 100vw;
   position: relative;
