--- a/src/css/clue.scss
+++ b/src/css/clue.scss
@@ -7,6 +7,7 @@
   --peacock-color: #b300b3;
   --clue-dark: #1d1d1d;
   --clue-muted: rgb(165, 156, 156);
+  --clue-light: #e5e5e5;
 }
 
 .clue-text-shadow {
