feat: Alterado método de exit game

--- a/src/css/clue.scss
+++ b/src/css/clue.scss
@@ -26,7 +26,7 @@
   align-items: center;
   justify-content: center;
 }
-.clue-page {
+.border-container {
   min-width: 200px !important;
   width: 1200px !important;
 }
