--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -23,3 +23,14 @@ $positive: #21ba45;
 $negative: #c10015;
 $info: #31ccec;
 $warning: #f2c037;
+
+$light: #f1f1f1;
+$gray500: #a8a8b3;
+$gray800: #29292e;
+
+//https://lifehacker.com/stick-to-these-font-sizes-to-simplify-designs-and-more-1531615325
+$title-size: 50px;
+$subtitle-size: 28px;
+$subtitle2-size: 21px;
+$text-size: 16px;
+$caption-size: 12px;
