feat: Iniciado acusação

--- a/src/css/clue.scss
+++ b/src/css/clue.scss
@@ -18,6 +18,10 @@
   color: var(--clue-muted) !important;
 }
 
+.border-ccc {
+  border: 1px solid #ccc;
+}
+
 .clue-container {
   background: url(/img/wallpaper.jpg) no-repeat;
   background-size: cover;
