--- a/src/components/dice-rolling-styles.scss
+++ b/src/components/dice-rolling-styles.scss
@@ -1056,6 +1056,10 @@ $rollAResults: "A8", "A6", "A8", "A11", "A10", "A4", "A8", "A5", "A9", "A4", "A4
 $rollBResults: "B9", "B8", "B2", "B12", "B8", "B5", "B4", "B4", "B7", "B10", "B6", "B7", "B7", "B9", "B7", "B3", "B3",
   "B10", "B5", "B7", "B8", "B5", "B11", "B9", "B8", "B5", "B8", "B6", "B11", "B6", "B4", "B9", "B6", "B6", "B10", "B7";
 
+// $rollAResults: "A6", "A4", "A5", "A4", "A4", "A3", "A6", "A5", "A6", "A5", "A2", "A6", "A3", "A6", "A5";
+// $rollBResults: "B9", "B8", "B2", "B12", "B8", "B5", "B4", "B4", "B7", "B10", "B6", "B7", "B7", "B9", "B7", "B3", "B3",
+//   "B10", "B5", "B7", "B8", "B5", "B11", "B9", "B8", "B5", "B8", "B6", "B11", "B6", "B4", "B9", "B6", "B6", "B10", "B7";
+
 @mixin rollResultsProps {
   opacity: 1;
   transform: scale(1);
